add  new seller config